--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2>Recepción</h2>
                 <img class="imgRecep" src="img/salon.jpg" alt="Salón de Fiestas">
                 <p>4:30 PM - Jardín las Flores - Cañada Colorada s/n Apaxco, Edo. Mex</p>
-                <button onclick="location.href='https://maps.app.goo.gl/M3f2tcTBZ2jdDrAWA'">Ver en Google Maps</button>
+                <button onclick="location.href='https://maps.app.goo.gl/tHCmiDNvq1zd1mzA7'">Ver en Google Maps</button>
             </div>
         </div>
     </div>
